--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   firebase_remote_config: ^0.11.0
   flutter_signin_button: ^2.0.0
   google_sign_in: ^5.1.0
+  intl: ^0.17.0
   
 
 
