--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
     sdk: flutter
   get:
     git: https://github.com/jonataslaw/getx.git
+  #get: ^4.3.8
   firebase_core: ^1.6.0
   firebase_auth: ^3.1.1
   firebase_remote_config: ^0.11.0
