--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   flutter_rating_stars: ^1.0.3+4
   cloud_firestore: ^2.5.3
   transparent_image: ^2.0.0
+  flutter_launcher_icons: ^0.9.2
   
 
 
